bk_ida/gccida/g3/gen_rtx_fmt_uuuu
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/gen_rtx_fmt_uuuu/src/genrtl.c:1345:24: error: must use 'enum' tag to refer to type 'rtx_code'
rtx  gen_rtx_fmt_uuuu( rtx_code code, machine_mode mode, rtx arg0, rtx arg1, rtx arg2, rtx arg3) 
                       ^
                       enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/gen_rtx_fmt_uuuu/src/genrtl.c:1345:39: error: must use 'enum' tag to refer to type 'machine_mode'
rtx  gen_rtx_fmt_uuuu( rtx_code code, machine_mode mode, rtx arg0, rtx arg1, rtx arg2, rtx arg3) 
                                      ^
                                      enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/gen_rtx_fmt_uuuu/src/genrtl.c:1353:30: error: invalid conversion between vector type '__m128i' (vector of 2 'long long' values) and integer type 'unsigned long long' of different size
v10[0] = _mm_unpacklo_epi64( ( __m128i)( unsigned __int64)arg0, ( __m128i)( unsigned __int64)arg1); 
                             ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/gen_rtx_fmt_uuuu/src/genrtl.c:1353:65: error: invalid conversion between vector type '__m128i' (vector of 2 'long long' values) and integer type 'unsigned long long' of different size
v10[0] = _mm_unpacklo_epi64( ( __m128i)( unsigned __int64)arg0, ( __m128i)( unsigned __int64)arg1); 
                                                                ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/gen_rtx_fmt_uuuu/src/genrtl.c:1354:26: error: invalid conversion between vector type '__m128i' (vector of 2 'long long' values) and integer type 'unsigned long long' of different size
v9 = _mm_unpacklo_epi64( ( __m128i)( unsigned __int64)arg2, ( __m128i)( unsigned __int64)arg3); 
                         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/gen_rtx_fmt_uuuu/src/genrtl.c:1354:61: error: invalid conversion between vector type '__m128i' (vector of 2 'long long' values) and integer type 'unsigned long long' of different size
v9 = _mm_unpacklo_epi64( ( __m128i)( unsigned __int64)arg2, ( __m128i)( unsigned __int64)arg3); 
                                                            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/gen_rtx_fmt_uuuu/src/genrtl.c:1362:49: error: use of undeclared identifier 'rtx_def'
*(  struct rtx_def *)&result->fld[0].rtwint = ( rtx_def)si128; 
                                                ^
7 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/gen_rtx_fmt_uuuu/src/obj/genrtl.o] Error 1
